test/error/badforn4.luau
local init, limit, step = "hello", "hello", "hello"

for i = init, limit, step do
	print(i)
end
